// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> component should render a toast with title & message & action Buttons when type error 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #FF494A;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 4px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="error"
  >
    <div
      class="emotion-2 emotion-3"
      type="error"
    >
      <svg
        fill="none"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.988 0C5.364 0 0 5.376 0 12C0 18.624 5.364 24 11.988 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 11.988 0ZM12 21.6C6.696 21.6 2.4 17.304 2.4 12C2.4 6.696 6.696 2.4 12 2.4C17.304 2.4 21.6 6.696 21.6 12C21.6 17.304 17.304 21.6 12 21.6ZM10.8 15.6H13.2V18H10.8V15.6ZM10.8 6H13.2V13.2H10.8V6Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <button
          type="button"
        >
          Text
        </button>
        <button
          type="button"
        >
          Text2
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render a toast with title & message & action Buttons when type informative 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #008DFC;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 4px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="informative"
  >
    <div
      class="emotion-2 emotion-3"
      type="informative"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <button
          type="button"
        >
          Text
        </button>
        <button
          type="button"
        >
          Text2
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render a toast with title & message & action Buttons when type success 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #21A330;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 4px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="success"
  >
    <div
      class="emotion-2 emotion-3"
      type="success"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 12 0ZM12 21.6C6.708 21.6 2.4 17.292 2.4 12C2.4 6.708 6.708 2.4 12 2.4C17.292 2.4 21.6 6.708 21.6 12C21.6 17.292 17.292 21.6 12 21.6ZM17.508 6.696L9.6 14.604L6.492 11.508L4.8 13.2L9.6 18L19.2 8.4L17.508 6.696Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <button
          type="button"
        >
          Text
        </button>
        <button
          type="button"
        >
          Text2
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render a toast with title & message & action Buttons when type warning 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #FFD000;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 4px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="warning"
  >
    <div
      class="emotion-2 emotion-3"
      type="warning"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6.49L19.53 19.5H4.47L12 6.49ZM12 2.5L1 21.5H23L12 2.5ZM13 16.5H11V18.5H13V16.5ZM13 10.5H11V14.5H13V10.5Z"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <button
          type="button"
        >
          Text
        </button>
        <button
          type="button"
        >
          Text2
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render a toast with title & message when type error 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #FF494A;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="error"
  >
    <div
      class="emotion-2 emotion-3"
      type="error"
    >
      <svg
        fill="none"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.988 0C5.364 0 0 5.376 0 12C0 18.624 5.364 24 11.988 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 11.988 0ZM12 21.6C6.696 21.6 2.4 17.304 2.4 12C2.4 6.696 6.696 2.4 12 2.4C17.304 2.4 21.6 6.696 21.6 12C21.6 17.304 17.304 21.6 12 21.6ZM10.8 15.6H13.2V18H10.8V15.6ZM10.8 6H13.2V13.2H10.8V6Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      />
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render a toast with title & message when type informative 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #008DFC;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="informative"
  >
    <div
      class="emotion-2 emotion-3"
      type="informative"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      />
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render a toast with title & message when type success 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #21A330;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="success"
  >
    <div
      class="emotion-2 emotion-3"
      type="success"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 12 0ZM12 21.6C6.708 21.6 2.4 17.292 2.4 12C2.4 6.708 6.708 2.4 12 2.4C17.292 2.4 21.6 6.708 21.6 12C21.6 17.292 17.292 21.6 12 21.6ZM17.508 6.696L9.6 14.604L6.492 11.508L4.8 13.2L9.6 18L19.2 8.4L17.508 6.696Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      />
    </div>
  </div>
</div>
`;

exports[`<Toast /> component should render a toast with title & message when type warning 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 360px;
  -webkit-animation: animation-0 0.75s ease-in;
  animation: animation-0 0.75s ease-in;
  -webkit-transition: all 0.75s ease-in-out;
  transition: all 0.75s ease-in-out;
  overflow: hidden;
  background-color: #FFFFFF;
  opacity: 1;
  color: #454545;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #FFD000;
  color: #FFFFFF;
}

.emotion-4 {
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 16px 16px;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 24px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
  margin-bottom: 4px;
  text-transform: capitalize;
}

.emotion-10 {
  color: #454545;
  border: 0;
  cursor: pointer;
  background: transparent;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  font-size: 0;
  line-height: 0;
}

.emotion-10:hover {
  background-color: #FFFFFF;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  overflow: hidden;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toast-myId"
    type="warning"
  >
    <div
      class="emotion-2 emotion-3"
      type="warning"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6.49L19.53 19.5H4.47L12 6.49ZM12 2.5L1 21.5H23L12 2.5ZM13 16.5H11V18.5H13V16.5ZM13 10.5H11V14.5H13V10.5Z"
        />
      </svg>
    </div>
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          my title text
        </div>
        <button
          class="emotion-10 emotion-11"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="emotion-12 emotion-13"
        >
          my message text
        </div>
      </div>
      <div
        class="emotion-14 emotion-15"
      />
    </div>
  </div>
</div>
`;
